tests/ui/issues/issue-40000.stderr
error: higher-ranked subtype error
  --> $DIR/issue-40000.rs:6:9
   |
LL |     foo(bar);
   |         ^^^

error: higher-ranked subtype error
  --> $DIR/issue-40000.rs:6:9
   |
LL |     foo(bar);
   |         ^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 2 previous errors

